kubernetes/k3s-01/workloads/endurain/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: endurain
  namespace: endurain
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: endurain
