kubernetes/k3s-01/workloads/endurain/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: endurain
  namespace: endurain
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`endurain.47fc5c.com`)
      kind: Rule
      services:
        - name: endurain
          kind: Service
          port: 8080
          scheme: http
          sticky:
            cookie:
              httpOnly: true
              secure: true
              sameSite: none
  tls:
    secretName: endurain-certificate
